<resources>
    <string name="app_name">Gnana Mantapa</string>
    <string name="app_name2">‌‌‌‌ಙ್ಞಾನಮಂಟಪ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_home2">ನಮ್ಮ ಕುರಿತು</string>
    <string name="menu_gallery">Ask a Question</string>
    <string name="menu_gallery2">ವ್ಯಾಕರಣ ವಿಭಾಗ</string>
    <string name="menu_slideshow">About</string>
    <string name="menu_slideshow2">ಪ್ರಶ್ನೋತ್ತರ ವಿಭಾಗ</string>
    <string name="menu_tools">Report App Issues</string>
    <string name="menu_share">Share App</string>
    <string name="menu_send">Send</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_vn_id_here">Enter Your ID here</string>

    <string name="ask_question"><u>Click here to register</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FCM_PREF">com.goldenfuturecommunication.gnanamantapa.fcm_pref</string>
    <string name="FCM_TOKEN">com.goldenfuturecommunication.gnanamantapa.fcm_token</string>
</resources>
