<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home2" />
        <item
            android:id="@+id/nav_ask_a_ques"
            android:icon="@drawable/ic_question"
            android:title="@string/menu_gallery2" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menu_slideshow2" />
        <item
            android:id="@+id/nav_report_app_issues"
            android:icon="@drawable/ic_report_problem_black_24dp"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_shareapp"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
</menu>
    </item>

</menu>
