<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment_myaccount"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/loginView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/logo"
                        android:scaleType="fitXY"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:layout_marginTop="20dp"
                        android:textAlignment="center"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        android:textColor="#033BDB"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Registered User"
                        android:layout_gravity="center_horizontal"
                        android:textSize="16dp"
                        android:textColor="#547DF4"
                        android:textStyle="bold"
                        />
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:padding="16dp"
                        android:layout_marginRight="10dp"
                        app:cardMaxElevation="20dp"
                        android:layout_marginLeft="10dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" User ID"
                                android:textColor="#000000"
                                android:textSize="18dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="10dp"
                                />
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/enter_your_vn_id_here"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:background="#9C9DA2"
                                android:layout_marginTop="10dp"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" Password"
                                android:textColor="#000000"
                                android:textSize="18dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="10dp"
                                />
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/enter_your_password"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=" L o g i n "
                        android:textColor="#ffffff"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        android:background="#051D62 "
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="Forgot Password ?     "
                        android:layout_marginTop="5dp"
                        android:textSize="16dp"
                        android:textColor="#547DF4"
                        android:textStyle="bold"
                        />
                    <Button
                        android:id="@+id/registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=" R e g i s t r a t i o n "
                        android:textColor="#ffffff"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        android:background="#051D62 "
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>

<!--   ............................................................................... -->

    <LinearLayout
        android:id="@+id/profileView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/avatar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name:  "
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Username:  "
                    android:textSize="20sp"
                    android:textColor="#000000"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Phone number:  "
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="User phone no"
                    android:textSize="20sp"
                    android:textColor="#000000"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="City:  "
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="User city"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>